Changed the color of the background

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #E3F2FD;
+  background: #e91010;
 }
 
 .wrapper {
